--- a/SeleniumZombie/App.config
+++ b/SeleniumZombie/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="StartTime" value="20:00" />
-    <add key="EndTime" value="21:00" />
-    <add key="HubAddress" value="localhost:4444" />
+    <add key="StartTime" value="00:30" />
+    <add key="EndTime" value="06:30" />
+    <add key="HubAddress" value="10.50.20.76:4444" />
   </appSettings>
 </configuration>
