Set auto-update option to be optional & configurable Create configuration model to pack all options in one place

--- a/SeleniumZombie.Service/SeleniumZombie.Service.csproj
+++ b/SeleniumZombie.Service/SeleniumZombie.Service.csproj
@@ -35,6 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigurationFactory.cs" />
+    <Compile Include="Configuration\ConfigurationModel.cs" />
     <Compile Include="Update\ModuleUpdater.cs" />
     <Compile Include="Update\ModuleVersionModel.cs" />
     <Compile Include="Update\ModuleVersionsFileManager.cs" />
