--- a/SeleniumZombie/App.config
+++ b/SeleniumZombie/App.config
@@ -7,5 +7,6 @@
     <add key="StartTime" value="00:30" />
     <add key="EndTime" value="06:30" />
     <add key="HubAddress" value="10.50.20.76:4444" />
+    <add key="AutoUpdate" value="true" />
   </appSettings>
 </configuration>
