Make chrome instances number configurable

--- a/SeleniumZombie/App.config
+++ b/SeleniumZombie/App.config
@@ -8,5 +8,6 @@
     <add key="EndTime" value="06:30" />
     <add key="HubAddress" value="10.50.20.76:4444" />
     <add key="AutoUpdate" value="true" />
+    <add key="ChromeInstances" value="16" />
   </appSettings>
 </configuration>
